--- a/src/docs/1_GettingStarted.mdx
+++ b/src/docs/1_GettingStarted.mdx
@@ -1,5 +1,5 @@
 import { Meta, Markdown } from '@storybook/blocks';
-import Readme from '../README.md?raw';
+import Readme from '../../README.md?raw';
 
 <Meta title="1. Getting Started" />
 
