--- a/src/docs/2_Changelog.mdx
+++ b/src/docs/2_Changelog.mdx
@@ -1,5 +1,5 @@
 import { Meta, Markdown } from '@storybook/blocks';
-import Changelog from '../CHANGELOG.md?raw';
+import Changelog from '../../CHANGELOG.md?raw';
 
 <Meta title="2. Changelog" />
 
