--- a/src/docs/3_License.mdx
+++ b/src/docs/3_License.mdx
@@ -1,5 +1,5 @@
 import { Meta, Markdown } from '@storybook/blocks';
-import License from '../LICENSE?raw';
+import License from '../../LICENSE?raw';
 
 <Meta title="3. License" />
 
