component and docs changes

--- a/src/docs/3_Colors.mdx
+++ b/src/docs/3_Colors.mdx
@@ -1,4 +1,5 @@
 import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
+import { themes as stbThemes, ThemeProvider, ensure } from '@storybook/theming';
 
 <Meta title="3. Colors" />
 
