new components | refactor | internal changes

--- a/md/1_GettingStarted.mdx
+++ b/md/1_GettingStarted.mdx
@@ -1,4 +1,4 @@
-import Readme from '../../README.md?raw';
+import Readme from '../README.md?raw';
 import { Meta, Markdown } from '@storybook/blocks';
 
 <Meta title="1. Getting Started" />
