--- a/md/2_Changelog.mdx
+++ b/md/2_Changelog.mdx
@@ -1,4 +1,4 @@
-import Changelog from '../../CHANGELOG.md?raw';
+import Changelog from '../CHANGELOG.md?raw';
 import { Meta, Markdown } from '@storybook/blocks';
 
 <Meta title="2. Changelog" />
