--- a/md/4_License.mdx
+++ b/md/4_License.mdx
@@ -1,4 +1,4 @@
-import License from '../../LICENSE?raw';
+import License from '../LICENSE?raw';
 import { Meta, Markdown } from '@storybook/blocks';
 
 <Meta title="4. License" />
