--- a/md/4_License.mdx
+++ b/md/4_License.mdx
@@ -1,6 +1,6 @@
-import License from '../../LICENSE?raw';
+import License from '../LICENSE?raw';
 import { Meta, Markdown } from '@storybook/blocks';
 
-<Meta title="3. License" />
+<Meta title="4. License" />
 
 <Markdown>{License}</Markdown>
