--- a/documentation/lib/Changelog.mdx
+++ b/documentation/lib/Changelog.mdx
@@ -1,6 +1,6 @@
-import Changelog from '../CHANGELOG.md?raw';
+import Changelog from '../../CHANGELOG.md?raw';
 import { Meta, Markdown } from '@storybook/blocks';
 
-<Meta title="2. Changelog" />
+<Meta title="Bamboo/Changelog" />
 
 <Markdown>{Changelog}</Markdown>
