--- a/documentation/lib/GettingStarted.mdx
+++ b/documentation/lib/GettingStarted.mdx
@@ -1,6 +1,6 @@
-import Readme from '../README.md?raw';
+import Readme from '../../README.md?raw';
 import { Meta, Markdown } from '@storybook/blocks';
 
-<Meta title="1. Getting Started" />
+<Meta title="Bamboo/Get Started" />
 
 <Markdown>{Readme}</Markdown>
