--- a/documentation/lib/License.mdx
+++ b/documentation/lib/License.mdx
@@ -1,6 +1,6 @@
-import License from '../LICENSE?raw';
+import License from '../../LICENSE?raw';
 import { Meta, Markdown } from '@storybook/blocks';
 
-<Meta title="4. License" />
+<Meta title="Bamboo/License" />
 
 <Markdown>{License}</Markdown>
