--- a/.storybook/docs/colors.mdx
+++ b/.storybook/docs/colors.mdx
@@ -1,6 +1,6 @@
 import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 
-<Meta title="Css/Colors" />
+<Meta title="Docs/Colors" />
 
 <ColorPalette>
 	<ColorItem
