--- a/.storybook/docs/get-started.mdx
+++ b/.storybook/docs/get-started.mdx
@@ -1,6 +1,6 @@
 import Readme from '../../README.md?raw';
 import { Meta, Markdown } from '@storybook/blocks';
 
-<Meta title="Get Started" />
+<Meta title="Docs/Get Started" />
 
 <Markdown>{Readme}</Markdown>
