--- a/.storybook/docs/license.mdx
+++ b/.storybook/docs/license.mdx
@@ -1,6 +1,6 @@
-import License from '../../../LICENSE?raw';
+import License from '../../LICENSE?raw';
 import { Meta, Markdown } from '@storybook/blocks';
 
-<Meta title="Lib/License" />
+<Meta title="Docs/License" />
 
 <Markdown>{License}</Markdown>
