typo and badge doc changes

--- a/.storybook/docs/fonts/Inter.mdx
+++ b/.storybook/docs/fonts/Inter.mdx
@@ -15,13 +15,13 @@ export const typography = {
 		'font-extrabold': 800,
 	},
 	size: {
-		'font-xxs': 8,
 		'font-xs': 10,
 		'font-sm': 12,
 		'font-md': 14,
 		'font-lg': 16,
 		'font-xl': 18,
 		'font-xxl': 20,
+		'font-xxxl': 22,
 	},
 };
 
@@ -32,7 +32,7 @@ export const SampleText =
 
 **Font:** Inter
 
-**Font sizes:** 8(font-xxs), 10(font-xs), 12(font-sm), 14(font-md), 16(font-lg), 18(font-xl), 20(font-xxl)
+**Font sizes:** 10px(font-xs), 12px(font-sm), 14px(font-md), 16px(font-lg), 18px(font-xl), 20px(font-xxl), 22px(font-xxxl)
 
 **Font weights:** 300(font-light), 400(font-regular), 500(font-medium), 600(font-semibold), 700(font-bold), 800(font-extrabold)
 
@@ -40,13 +40,13 @@ export const SampleText =
 
 <Typeset
 	fontSizes={[
-		Number(typography.size['font-xxs']),
 		Number(typography.size['font-xs']),
 		Number(typography.size['font-sm']),
 		Number(typography.size['font-md']),
 		Number(typography.size['font-lg']),
 		Number(typography.size['font-xl']),
 		Number(typography.size['font-xxl']),
+		Number(typography.size['font-xxxl']),
 	]}
 	fontWeight={typography.weight['font-light']}
 	sampleText={SampleText}
@@ -57,13 +57,13 @@ export const SampleText =
 
 <Typeset
 	fontSizes={[
-		Number(typography.size['font-xxs']),
 		Number(typography.size['font-xs']),
 		Number(typography.size['font-sm']),
 		Number(typography.size['font-md']),
 		Number(typography.size['font-lg']),
 		Number(typography.size['font-xl']),
 		Number(typography.size['font-xxl']),
+		Number(typography.size['font-xxxl']),
 	]}
 	fontWeight={typography.weight['font-regular']}
 	sampleText={SampleText}
@@ -74,13 +74,13 @@ export const SampleText =
 
 <Typeset
 	fontSizes={[
-		Number(typography.size['font-xxs']),
 		Number(typography.size['font-xs']),
 		Number(typography.size['font-sm']),
 		Number(typography.size['font-md']),
 		Number(typography.size['font-lg']),
 		Number(typography.size['font-xl']),
 		Number(typography.size['font-xxl']),
+		Number(typography.size['font-xxxl']),
 	]}
 	fontWeight={typography.weight['font-medium']}
 	sampleText={SampleText}
@@ -91,13 +91,13 @@ export const SampleText =
 
 <Typeset
 	fontSizes={[
-		Number(typography.size['font-xxs']),
 		Number(typography.size['font-xs']),
 		Number(typography.size['font-sm']),
 		Number(typography.size['font-md']),
 		Number(typography.size['font-lg']),
 		Number(typography.size['font-xl']),
 		Number(typography.size['font-xxl']),
+		Number(typography.size['font-xxxl']),
 	]}
 	fontWeight={typography.weight['font-semibold']}
 	sampleText={SampleText}
@@ -108,13 +108,13 @@ export const SampleText =
 
 <Typeset
 	fontSizes={[
-		Number(typography.size['font-xxs']),
 		Number(typography.size['font-xs']),
 		Number(typography.size['font-sm']),
 		Number(typography.size['font-md']),
 		Number(typography.size['font-lg']),
 		Number(typography.size['font-xl']),
 		Number(typography.size['font-xxl']),
+		Number(typography.size['font-xxxl']),
 	]}
 	fontWeight={typography.weight['font-bold']}
 	sampleText={SampleText}
