--- a/.storybook/docs/colors.mdx
+++ b/.storybook/docs/colors.mdx
@@ -4,29 +4,32 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 
 <ColorPalette>
 	<ColorItem
-		title="transparent"
-		subtitle="Transparent"
+		title="Transparent"
 		colors={{ transparent: 'transparent' }}
 	/>
 	<ColorItem
-		title="black"
-		subtitle="Black"
+		title="Black"
 		colors={{ black: '#000000' }}
 	/>
 	<ColorItem
-		title="white"
-		subtitle="White"
+		title="White"
 		colors={{ white: '#ffffff' }}
 	/>
 	<ColorItem
-		title="slate"
-		subtitle="Slate"
+		title="Slate"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'slate-50': '#f8fafc',
 			'slate-100': '#f1f5f9',
 			'slate-200': '#e2e8f0',
 			'slate-300': '#cbd5e1',
 			'slate-400': '#94a3b8',
+		}}
+	/>
+	<ColorItem
+		title="Slate"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'slate-500': '#64748b',
 			'slate-600': '#475569',
 			'slate-700': '#334155',
@@ -36,14 +39,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="gray"
-		subtitle="Gray"
+		title="Gray"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'gray-50': '#f9fafb',
 			'gray-100': '#f3f4f6',
 			'gray-200': '#e5e7eb',
 			'gray-300': '#d1d5db',
 			'gray-400': '#9ca3af',
+		}}
+	/>
+	<ColorItem
+		title="Gray"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'gray-500': '#6b7280',
 			'gray-600': '#4b5563',
 			'gray-700': '#374151',
@@ -53,14 +62,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="zinc"
-		subtitle="Zinc"
+		title="Zinc"
+		subtitle="100, 200, 300, 400, 500"
 		colors={{
 			'zinc-100': '#f4f4f5',
 			'zinc-200': '#e4e4e7',
 			'zinc-300': '#d4d4d8',
 			'zinc-400': '#a1a1aa',
 			'zinc-500': '#71717a',
+		}}
+	/>
+	<ColorItem
+		title="Zinc"
+		subtitle="600, 700, 800, 900, 950"
+		colors={{
 			'zinc-600': '#52525b',
 			'zinc-700': '#3f3f46',
 			'zinc-800': '#27272a',
@@ -69,14 +84,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="neutral"
-		subtitle="Neutral"
+		title="Neutral"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'neutral-50': '#fafafa',
 			'neutral-100': '#f5f5f5',
 			'neutral-200': '#e5e5e5',
 			'neutral-300': '#d4d4d4',
 			'neutral-400': '#a3a3a3',
+		}}
+	/>
+	<ColorItem
+		title="Neutral"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'neutral-500': '#737373',
 			'neutral-600': '#525252',
 			'neutral-700': '#404040',
@@ -86,14 +107,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="stone"
-		subtitle="Stone"
+		title="Stone"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'stone-50': '#fafaf9',
 			'stone-100': '#f5f5f4',
 			'stone-200': '#e7e5e4',
 			'stone-300': '#d6d3d1',
 			'stone-400': '#a8a29e',
+		}}
+	/>
+	<ColorItem
+		title="Stone"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'stone-500': '#78716c',
 			'stone-600': '#57534e',
 			'stone-700': '#44403c',
@@ -103,14 +130,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="red"
-		subtitle="Red"
+		title="Red"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'red-50': '#fef2f2',
 			'red-100': '#fee2e2',
 			'red-200': '#fecaca',
 			'red-300': '#fca5a5',
 			'red-400': '#f87171',
+		}}
+	/>
+	<ColorItem
+		title="Red"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'red-500': '#ef4444',
 			'red-600': '#dc2626',
 			'red-700': '#b91c1c',
@@ -120,14 +153,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="orange"
-		subtitle="Orange"
+		title="Orange"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'orange-50': '#fff7ed',
 			'orange-100': '#ffedd5',
 			'orange-200': '#fed7aa',
 			'orange-300': '#fdba74',
 			'orange-400': '#fb923c',
+		}}
+	/>
+	<ColorItem
+		title="Orange"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'orange-500': '#f97316',
 			'orange-600': '#ea580c',
 			'orange-700': '#c2410c',
@@ -137,14 +176,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="amber"
-		subtitle="Amber"
+		title="Amber"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'amber-50': '#fffbeb',
 			'amber-100': '#fef3c7',
 			'amber-200': '#fde68a',
 			'amber-300': '#fcd34d',
 			'amber-400': '#fbbf24',
+		}}
+	/>
+	<ColorItem
+		title="Amber"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'amber-500': '#f59e0b',
 			'amber-600': '#d97706',
 			'amber-700': '#b45309',
@@ -154,14 +199,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="yellow"
-		subtitle="Yellow"
+		title="Yellow"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'yellow-50': '#fefce8',
 			'yellow-100': '#fef9c3',
 			'yellow-200': '#fef08a',
 			'yellow-300': '#fde047',
 			'yellow-400': '#facc15',
+		}}
+	/>
+	<ColorItem
+		title="Yellow"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'yellow-500': '#eab308',
 			'yellow-600': '#ca8a04',
 			'yellow-700': '#a16207',
@@ -171,14 +222,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="lime"
-		subtitle="Lime"
+		title="Lime"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'lime-50': '#f7fee7',
 			'lime-100': '#ecfccb',
 			'lime-200': '#d9f99d',
 			'lime-300': '#bef264',
 			'lime-400': '#a3e635',
+		}}
+	/>
+	<ColorItem
+		title="Lime"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'lime-500': '#84cc16',
 			'lime-600': '#65a30d',
 			'lime-700': '#4d7c0f',
@@ -188,14 +245,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="green"
-		subtitle="Green"
+		title="Green"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'green-50': '#f0fdf4',
 			'green-100': '#dcfce7',
 			'green-200': '#bbf7d0',
 			'green-300': '#86efac',
 			'green-400': '#4ade80',
+		}}
+	/>
+	<ColorItem
+		title="Green"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'green-500': '#22c55e',
 			'green-600': '#16a34a',
 			'green-700': '#15803d',
@@ -205,14 +268,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="emerald"
-		subtitle="Emerald"
+		title="Emerald"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'emerald-50': '#ecfdf5',
 			'emerald-100': '#d1fae5',
 			'emerald-200': '#a7f3d0',
 			'emerald-300': '#6ee7b7',
 			'emerald-400': '#34d399',
+		}}
+	/>
+	<ColorItem
+		title="Emerald"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'emerald-500': '#10b981',
 			'emerald-600': '#059669',
 			'emerald-700': '#047857',
@@ -222,14 +291,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="teal"
-		subtitle="Teal"
+		title="Teal"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'teal-50': '#f0fdfa',
 			'teal-100': '#ccfbf1',
 			'teal-200': '#99f6e4',
 			'teal-300': '#5eead4',
 			'teal-400': '#2dd4bf',
+		}}
+	/>
+	<ColorItem
+		title="Teal"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'teal-500': '#14b8a6',
 			'teal-600': '#0d9488',
 			'teal-700': '#0f766e',
@@ -239,14 +314,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="cyan"
-		subtitle="Cyan"
+		title="Cyan"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'cyan-50': '#ecfeff',
 			'cyan-100': '#cffafe',
 			'cyan-200': '#a5f3fc',
 			'cyan-300': '#67e8f9',
 			'cyan-400': '#22d3ee',
+		}}
+	/>
+	<ColorItem
+		title="cyan"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'cyan-500': '#06b6d4',
 			'cyan-600': '#0891b2',
 			'cyan-700': '#0e7490',
@@ -256,14 +337,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="sky"
-		subtitle="Sky"
+		title="Sky"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'sky-50': '#f0f9ff',
 			'sky-100': '#e0f2fe',
 			'sky-200': '#bae6fd',
 			'sky-300': '#7dd3fc',
 			'sky-400': '#38bdf8',
+		}}
+	/>
+	<ColorItem
+		title="Sky"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'sky-500': '#0ea5e9',
 			'sky-600': '#0284c7',
 			'sky-700': '#0369a1',
@@ -273,14 +360,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="blue"
-		subtitle="Blue"
+		title="Blue"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'blue-50': '#eff6ff',
 			'blue-100': '#dbeafe',
 			'blue-200': '#bfdbfe',
 			'blue-300': '#93c5fd',
 			'blue-400': '#60a5fa',
+		}}
+	/>
+	<ColorItem
+		title="Blue"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'blue-500': '#3b82f6',
 			'blue-600': '#2563eb',
 			'blue-700': '#1d4ed8',
@@ -290,14 +383,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="indigo"
-		subtitle="Indigo"
+		title="Indigo"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'indigo-50': '#eef2ff',
 			'indigo-100': '#e0e7ff',
 			'indigo-200': '#c7d2fe',
 			'indigo-300': '#a5b4fc',
 			'indigo-400': '#818cf8',
+		}}
+	/>
+	<ColorItem
+		title="Indigo"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'indigo-500': '#6366f1',
 			'indigo-600': '#4f46e5',
 			'indigo-700': '#4338ca',
@@ -307,14 +406,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="violet"
-		subtitle="Violet"
+		title="Violet"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'violet-50': '#f5f3ff',
 			'violet-100': '#ede9fe',
 			'violet-200': '#ddd6fe',
 			'violet-300': '#c4b5fd',
 			'violet-400': '#a78bfa',
+		}}
+	/>
+	<ColorItem
+		title="Violet"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'violet-500': '#8b5cf6',
 			'violet-600': '#7c3aed',
 			'violet-700': '#6d28d9',
@@ -324,14 +429,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="purple"
-		subtitle="Purple"
+		title="Purple"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'purple-50': '#faf5ff',
 			'purple-100': '#f3e8ff',
 			'purple-200': '#e9d5ff',
 			'purple-300': '#d8b4fe',
 			'purple-400': '#c084fc',
+		}}
+	/>
+	<ColorItem
+		title="Purple"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'purple-500': '#a855f7',
 			'purple-600': '#9333ea',
 			'purple-700': '#7e22ce',
@@ -341,14 +452,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="fuchsia"
-		subtitle="Fuchsia"
+		title="Fuchsia"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'fuchsia-50': '#fdf4ff',
 			'fuchsia-100': '#fae8ff',
 			'fuchsia-200': '#f5d0fe',
 			'fuchsia-300': '#f0abfc',
 			'fuchsia-400': '#e879f9',
+		}}
+	/>
+	<ColorItem
+		title="Fuchsia"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'fuchsia-500': '#d946ef',
 			'fuchsia-600': '#c026d3',
 			'fuchsia-700': '#a21caf',
@@ -358,14 +475,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="pink"
-		subtitle="Pink"
+		title="Pink"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'pink-50': '#fdf2f8',
 			'pink-100': '#fce7f3',
 			'pink-200': '#fbcfe8',
 			'pink-300': '#f9a8d4',
 			'pink-400': '#f472b6',
+		}}
+	/>
+	<ColorItem
+		title="Pink"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'pink-500': '#ec4899',
 			'pink-600': '#db2777',
 			'pink-700': '#be185d',
@@ -375,14 +498,20 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 		}}
 	/>
 	<ColorItem
-		title="rose"
-		subtitle="Rose"
+		title="Rose"
+		subtitle="50, 100, 200, 300, 400"
 		colors={{
 			'rose-50': '#fff1f2',
 			'rose-100': '#ffe4e6',
 			'rose-200': '#fecdd3',
 			'rose-300': '#fda4af',
 			'rose-400': '#fb7185',
+		}}
+	/>
+	<ColorItem
+		title="Rose"
+		subtitle="500, 600, 700, 800, 900, 950"
+		colors={{
 			'rose-500': '#f43f5e',
 			'rose-600': '#e11d48',
 			'rose-700': '#be123c',
