--- a/.storybook/docs/fonts/Assistant.mdx
+++ b/.storybook/docs/fonts/Assistant.mdx
@@ -15,13 +15,14 @@ export const typography = {
 		'font-extrabold': 800,
 	},
 	size: {
-		'font-xs': 10,
-		'font-sm': 12,
-		'font-md': 14,
-		'font-lg': 16,
-		'font-xl': 18,
-		'font-xxl': 20,
-		'font-xxxl': 22,
+		'font-xxs': 10,
+		'font-xs': 12,
+		'font-sm': 14,
+		'font-md': 16,
+		'font-lg': 18,
+		'font-xl': 20,
+		'font-xxl': 24,
+		'font-xxxl': 30,
 	},
 };
 
@@ -32,7 +33,7 @@ export const SampleText =
 
 **Font:** Assistant
 
-**Font sizes:** 10px(font-xs), 12px(font-sm), 14px(font-md), 16px(font-lg), 18px(font-xl), 20px(font-xxl), 22px(font-xxxl)
+**Font sizes:** 10px(font-xxs), 12px(font-xs), 14px(font-sm), 16px(font-md), 18px(font-lg), 20px(font-xl), 24px(font-xxl), 30px(font-xxxl)
 
 **Font weights:** 300(font-light), 400(font-regular), 500(font-medium), 600(font-semibold), 700(font-bold), 800(font-extrabold)
 
@@ -40,6 +41,7 @@ export const SampleText =
 
 <Typeset
 	fontSizes={[
+		Number(typography.size['font-xxs']),
 		Number(typography.size['font-xs']),
 		Number(typography.size['font-sm']),
 		Number(typography.size['font-md']),
@@ -57,6 +59,7 @@ export const SampleText =
 
 <Typeset
 	fontSizes={[
+		Number(typography.size['font-xxs']),
 		Number(typography.size['font-xs']),
 		Number(typography.size['font-sm']),
 		Number(typography.size['font-md']),
@@ -74,6 +77,7 @@ export const SampleText =
 
 <Typeset
 	fontSizes={[
+		Number(typography.size['font-xxs']),
 		Number(typography.size['font-xs']),
 		Number(typography.size['font-sm']),
 		Number(typography.size['font-md']),
@@ -91,6 +95,7 @@ export const SampleText =
 
 <Typeset
 	fontSizes={[
+		Number(typography.size['font-xxs']),
 		Number(typography.size['font-xs']),
 		Number(typography.size['font-sm']),
 		Number(typography.size['font-md']),
@@ -108,6 +113,7 @@ export const SampleText =
 
 <Typeset
 	fontSizes={[
+		Number(typography.size['font-xxs']),
 		Number(typography.size['font-xs']),
 		Number(typography.size['font-sm']),
 		Number(typography.size['font-md']),
