--- a/src/components/Icon/__stories__/Iconography.mdx
+++ b/src/components/Icon/__stories__/Iconography.mdx
@@ -1,288 +1,288 @@
 import { Meta, Title, IconGallery, IconItem } from '@storybook/blocks';
 
-import activity from '@/assets/icon/activity.svg';
-import airplay from '@/assets/icon/airplay.svg';
-import alertCircle from '@/assets/icon/alert-circle.svg';
-import alertOctagon from '@/assets/icon/alert-octagon.svg';
-import alertTriangle from '@/assets/icon/alert-triangle.svg';
-import alignCenter from '@/assets/icon/align-center.svg';
-import alignJustify from '@/assets/icon/align-justify.svg';
-import alignLeft from '@/assets/icon/align-left.svg';
-import alignRight from '@/assets/icon/align-right.svg';
-import anchor from '@/assets/icon/anchor.svg';
-import aperture from '@/assets/icon/aperture.svg';
-import archive from '@/assets/icon/archive.svg';
-import arrowDownCircle from '@/assets/icon/arrow-down-circle.svg';
-import arrowDownLeft from '@/assets/icon/arrow-down-left.svg';
-import arrowDownRightSvg from '@/assets/icon/arrow-down-right.svg';
-import arrowDownSvg from '@/assets/icon/arrow-down.svg';
-import arrowLeftCircleSvg from '@/assets/icon/arrow-left-circle.svg';
-import arrowLeftSvg from '@/assets/icon/arrow-left.svg';
-import arrowRightCircleSvg from '@/assets/icon/arrow-right-circle.svg';
-import arrowRightSvg from '@/assets/icon/arrow-right.svg';
-import arrowUpCircleSvg from '@/assets/icon/arrow-up-circle.svg';
-import arrowUpLeftSvg from '@/assets/icon/arrow-up-left.svg';
-import arrowUpRightSvg from '@/assets/icon/arrow-up-right.svg';
-import arrowUpSvg from '@/assets/icon/arrow-up.svg';
-import atSignSvg from '@/assets/icon/at-sign.svg';
-import awardSvg from '@/assets/icon/award.svg';
-import barChart2Svg from '@/assets/icon/bar-chart-2.svg';
-import barChartSvg from '@/assets/icon/bar-chart.svg';
-import batteryChargingSvg from '@/assets/icon/battery-charging.svg';
-import batterySvg from '@/assets/icon/battery.svg';
-import bellOffSvg from '@/assets/icon/bell-off.svg';
-import bellSvg from '@/assets/icon/bell.svg';
-import bluetoothSvg from '@/assets/icon/bluetooth.svg';
-import boldSvg from '@/assets/icon/bold.svg';
-import bookOpenSvg from '@/assets/icon/book-open.svg';
-import bookSvg from '@/assets/icon/book.svg';
-import bookmarkSvg from '@/assets/icon/bookmark.svg';
-import boxSvg from '@/assets/icon/box.svg';
-import briefcaseSvg from '@/assets/icon/briefcase.svg';
-import calendarSvg from '@/assets/icon/calendar.svg';
-import cameraOffSvg from '@/assets/icon/camera-off.svg';
-import cameraSvg from '@/assets/icon/camera.svg';
-import castSvg from '@/assets/icon/cast.svg';
-import checkCircleSvg from '@/assets/icon/check-circle.svg';
-import checkSquareSvg from '@/assets/icon/check-square.svg';
-import checkSvg from '@/assets/icon/check.svg';
-import chevronDownSvg from '@/assets/icon/chevron-down.svg';
-import chevronLeftSvg from '@/assets/icon/chevron-left.svg';
-import chevronRightSvg from '@/assets/icon/chevron-right.svg';
-import chevronUpSvg from '@/assets/icon/chevron-up.svg';
-import chevronsDownSvg from '@/assets/icon/chevrons-down.svg';
-import chevronsLeftSvg from '@/assets/icon/chevrons-left.svg';
-import chevronsRightSvg from '@/assets/icon/chevrons-right.svg';
-import chevronsUpSvg from '@/assets/icon/chevrons-up.svg';
-import chromeSvg from '@/assets/icon/chrome.svg';
-import circleSvg from '@/assets/icon/circle.svg';
-import clipboardSvg from '@/assets/icon/clipboard.svg';
-import clockSvg from '@/assets/icon/clock.svg';
-import cloudDrizzleSvg from '@/assets/icon/cloud-drizzle.svg';
-import cloudLightningSvg from '@/assets/icon/cloud-lightning.svg';
-import cloudOffSvg from '@/assets/icon/cloud-off.svg';
-import cloudRainSvg from '@/assets/icon/cloud-rain.svg';
-import cloudSnowSvg from '@/assets/icon/cloud-snow.svg';
-import cloudSvg from '@/assets/icon/cloud.svg';
-import codeSvg from '@/assets/icon/code.svg';
-import codepenSvg from '@/assets/icon/codepen.svg';
-import codesandboxSvg from '@/assets/icon/codesandbox.svg';
-import coffeeSvg from '@/assets/icon/coffee.svg';
-import columnsSvg from '@/assets/icon/columns.svg';
-import commandSvg from '@/assets/icon/command.svg';
-import compassSvg from '@/assets/icon/compass.svg';
-import copySvg from '@/assets/icon/copy.svg';
-import cornerDownLeftSvg from '@/assets/icon/corner-down-left.svg';
-import cornerDownRightSvg from '@/assets/icon/corner-down-right.svg';
-import cornerLeftDownSvg from '@/assets/icon/corner-left-down.svg';
-import cornerLeftUpSvg from '@/assets/icon/corner-left-up.svg';
-import cornerRightDownSvg from '@/assets/icon/corner-right-down.svg';
-import cornerRightUpSvg from '@/assets/icon/corner-right-up.svg';
-import cornerUpLeftSvg from '@/assets/icon/corner-up-left.svg';
-import cornerUpRightSvg from '@/assets/icon/corner-up-right.svg';
-import cpuSvg from '@/assets/icon/cpu.svg';
-import creditCardSvg from '@/assets/icon/credit-card.svg';
-import cropSvg from '@/assets/icon/crop.svg';
-import crosshairSvg from '@/assets/icon/crosshair.svg';
-import databaseSvg from '@/assets/icon/database.svg';
-import deleteSvg from '@/assets/icon/delete.svg';
-import discSvg from '@/assets/icon/disc.svg';
-import dollarSignSvg from '@/assets/icon/dollar-sign.svg';
-import downloadCloudSvg from '@/assets/icon/download-cloud.svg';
-import downloadSvg from '@/assets/icon/download.svg';
-import dropletSvg from '@/assets/icon/droplet.svg';
-import edit2Svg from '@/assets/icon/edit-2.svg';
-import edit3Svg from '@/assets/icon/edit-3.svg';
-import editSvg from '@/assets/icon/edit.svg';
-import externalLinkSvg from '@/assets/icon/external-link.svg';
-import eyeOffSvg from '@/assets/icon/eye-off.svg';
-import eyeSvg from '@/assets/icon/eye.svg';
-import facebookSvg from '@/assets/icon/facebook.svg';
-import fastForwardSvg from '@/assets/icon/fast-forward.svg';
-import featherSvg from '@/assets/icon/feather.svg';
-import figmaSvg from '@/assets/icon/figma.svg';
-import fileMinusSvg from '@/assets/icon/file-minus.svg';
-import filePlusSvg from '@/assets/icon/file-plus.svg';
-import fileSvg from '@/assets/icon/file.svg';
-import fileTextSvg from '@/assets/icon/file-text.svg';
-import filmSvg from '@/assets/icon/film.svg';
-import filterSvg from '@/assets/icon/filter.svg';
-import flagSvg from '@/assets/icon/flag.svg';
-import folderMinusSvg from '@/assets/icon/folder-minus.svg';
-import folderPlusSvg from '@/assets/icon/folder-plus.svg';
-import folderSvg from '@/assets/icon/folder.svg';
-import framerSvg from '@/assets/icon/framer.svg';
-import frownSvg from '@/assets/icon/frown.svg';
-import giftSvg from '@/assets/icon/gift.svg';
-import gitBranchSvg from '@/assets/icon/git-branch.svg';
-import gitCommitSvg from '@/assets/icon/git-commit.svg';
-import gitMergeSvg from '@/assets/icon/git-merge.svg';
-import gitPullRequestSvg from '@/assets/icon/git-pull-request.svg';
-import githubSvg from '@/assets/icon/github.svg';
-import gitlabSvg from '@/assets/icon/gitlab.svg';
-import globeSvg from '@/assets/icon/globe.svg';
-import gridSvg from '@/assets/icon/grid.svg';
-import hardDriveSvg from '@/assets/icon/hard-drive.svg';
-import hashSvg from '@/assets/icon/hash.svg';
-import headphonesSvg from '@/assets/icon/headphones.svg';
-import heartSvg from '@/assets/icon/heart.svg';
-import helpCircleSvg from '@/assets/icon/help-circle.svg';
-import hexagonSvg from '@/assets/icon/hexagon.svg';
-import homeSvg from '@/assets/icon/home.svg';
-import imageSvg from '@/assets/icon/image.svg';
-import inboxSvg from '@/assets/icon/inbox.svg';
-import infoSvg from '@/assets/icon/info.svg';
-import instagramSvg from '@/assets/icon/instagram.svg';
-import italicSvg from '@/assets/icon/italic.svg';
-import keySvg from '@/assets/icon/key.svg';
-import layersSvg from '@/assets/icon/layers.svg';
-import layoutSvg from '@/assets/icon/layout.svg';
-import lifeBuoySvg from '@/assets/icon/life-buoy.svg';
-import link2Svg from '@/assets/icon/link-2.svg';
-import linkSvg from '@/assets/icon/link.svg';
-import linkedinSvg from '@/assets/icon/linkedin.svg';
-import listSvg from '@/assets/icon/list.svg';
-import loaderSvg from '@/assets/icon/loader.svg';
-import lockSvg from '@/assets/icon/lock.svg';
-import logInSvg from '@/assets/icon/log-in.svg';
-import logOutSvg from '@/assets/icon/log-out.svg';
-import mailSvg from '@/assets/icon/mail.svg';
-import mapPinSvg from '@/assets/icon/map-pin.svg';
-import mapSvg from '@/assets/icon/map.svg';
-import maximize2Svg from '@/assets/icon/maximize-2.svg';
-import maximizeSvg from '@/assets/icon/maximize.svg';
-import mehSvg from '@/assets/icon/meh.svg';
-import menuSvg from '@/assets/icon/menu.svg';
-import messageCircleSvg from '@/assets/icon/message-circle.svg';
-import messageSquareSvg from '@/assets/icon/message-square.svg';
-import micOffSvg from '@/assets/icon/mic-off.svg';
-import micSvg from '@/assets/icon/mic.svg';
-import minimize2Svg from '@/assets/icon/minimize-2.svg';
-import minimizeSvg from '@/assets/icon/minimize.svg';
-import minusCircleSvg from '@/assets/icon/minus-circle.svg';
-import minusSquareSvg from '@/assets/icon/minus-square.svg';
-import minusSvg from '@/assets/icon/minus.svg';
-import monitorSvg from '@/assets/icon/monitor.svg';
-import moonSvg from '@/assets/icon/moon.svg';
-import moreHorizontalSvg from '@/assets/icon/more-horizontal.svg';
-import moreVerticalSvg from '@/assets/icon/more-vertical.svg';
-import mousePointerSvg from '@/assets/icon/mouse-pointer.svg';
-import moveSvg from '@/assets/icon/move.svg';
-import musicSvg from '@/assets/icon/music.svg';
-import navigation2Svg from '@/assets/icon/navigation-2.svg';
-import navigationSvg from '@/assets/icon/navigation.svg';
-import octagonSvg from '@/assets/icon/octagon.svg';
-import packageSvg from '@/assets/icon/package.svg';
-import paperclipSvg from '@/assets/icon/paperclip.svg';
-import pauseCircleSvg from '@/assets/icon/pause-circle.svg';
-import pauseSvg from '@/assets/icon/pause.svg';
-import penToolSvg from '@/assets/icon/pen-tool.svg';
-import percentSvg from '@/assets/icon/percent.svg';
-import phoneCallSvg from '@/assets/icon/phone-call.svg';
-import phoneForwardedSvg from '@/assets/icon/phone-forwarded.svg';
-import phoneIncomingSvg from '@/assets/icon/phone-incoming.svg';
-import phoneMissedSvg from '@/assets/icon/phone-missed.svg';
-import phoneOffSvg from '@/assets/icon/phone-off.svg';
-import phoneOutgoingSvg from '@/assets/icon/phone-outgoing.svg';
-import phoneSvg from '@/assets/icon/phone.svg';
-import pieChartSvg from '@/assets/icon/pie-chart.svg';
-import playCircleSvg from '@/assets/icon/play-circle.svg';
-import playSvg from '@/assets/icon/play.svg';
-import plusCircleSvg from '@/assets/icon/plus-circle.svg';
-import plusSquareSvg from '@/assets/icon/plus-square.svg';
-import plusSvg from '@/assets/icon/plus.svg';
-import pocketSvg from '@/assets/icon/pocket.svg';
-import powerSvg from '@/assets/icon/power.svg';
-import printerSvg from '@/assets/icon/printer.svg';
-import radioSvg from '@/assets/icon/radio.svg';
-import refreshCcwSvg from '@/assets/icon/refresh-ccw.svg';
-import refreshCwSvg from '@/assets/icon/refresh-cw.svg';
-import repeatSvg from '@/assets/icon/repeat.svg';
-import rewindSvg from '@/assets/icon/rewind.svg';
-import rotateCcwSvg from '@/assets/icon/rotate-ccw.svg';
-import rotateCwSvg from '@/assets/icon/rotate-cw.svg';
-import rssSvg from '@/assets/icon/rss.svg';
-import saveSvg from '@/assets/icon/save.svg';
-import scissorsSvg from '@/assets/icon/scissors.svg';
-import searchSvg from '@/assets/icon/search.svg';
-import sendSvg from '@/assets/icon/send.svg';
-import serverSvg from '@/assets/icon/server.svg';
-import settingsSvg from '@/assets/icon/settings.svg';
-import share2Svg from '@/assets/icon/share-2.svg';
-import shareSvg from '@/assets/icon/share.svg';
-import shieldOffSvg from '@/assets/icon/shield-off.svg';
-import shieldSvg from '@/assets/icon/shield.svg';
-import shoppingBagSvg from '@/assets/icon/shopping-bag.svg';
-import shoppingCartSvg from '@/assets/icon/shopping-cart.svg';
-import shuffleSvg from '@/assets/icon/shuffle.svg';
-import sidebarSvg from '@/assets/icon/sidebar.svg';
-import skipBackSvg from '@/assets/icon/skip-back.svg';
-import skipForwardSvg from '@/assets/icon/skip-forward.svg';
-import slackSvg from '@/assets/icon/slack.svg';
-import slashSvg from '@/assets/icon/slash.svg';
-import slidersSvg from '@/assets/icon/sliders.svg';
-import smartphoneSvg from '@/assets/icon/smartphone.svg';
-import smileSvg from '@/assets/icon/smile.svg';
-import speakerSvg from '@/assets/icon/speaker.svg';
-import squareSvg from '@/assets/icon/square.svg';
-import starSvg from '@/assets/icon/star.svg';
-import stopCircleSvg from '@/assets/icon/stop-circle.svg';
-import sunSvg from '@/assets/icon/sun.svg';
-import sunriseSvg from '@/assets/icon/sunrise.svg';
-import sunsetSvg from '@/assets/icon/sunset.svg';
-import tabletSvg from '@/assets/icon/tablet.svg';
-import tagSvg from '@/assets/icon/tag.svg';
-import targetSvg from '@/assets/icon/target.svg';
-import terminalSvg from '@/assets/icon/terminal.svg';
-import thermometerSvg from '@/assets/icon/thermometer.svg';
-import thumbsDownSvg from '@/assets/icon/thumbs-down.svg';
-import thumbsUpSvg from '@/assets/icon/thumbs-up.svg';
-import toggleLeftSvg from '@/assets/icon/toggle-left.svg';
-import toggleRightSvg from '@/assets/icon/toggle-right.svg';
-import toolSvg from '@/assets/icon/tool.svg';
-import trash2Svg from '@/assets/icon/trash-2.svg';
-import trashSvg from '@/assets/icon/trash.svg';
-import trelloSvg from '@/assets/icon/trello.svg';
-import trendingDownSvg from '@/assets/icon/trending-down.svg';
-import trendingUpSvg from '@/assets/icon/trending-up.svg';
-import triangleSvg from '@/assets/icon/triangle.svg';
-import truckSvg from '@/assets/icon/truck.svg';
-import tvSvg from '@/assets/icon/tv.svg';
-import twitchSvg from '@/assets/icon/twitch.svg';
-import twitterSvg from '@/assets/icon/twitter.svg';
-import typeSvg from '@/assets/icon/type.svg';
-import umbrellaSvg from '@/assets/icon/umbrella.svg';
-import underlineSvg from '@/assets/icon/underline.svg';
-import unlockSvg from '@/assets/icon/unlock.svg';
-import uploadCloudSvg from '@/assets/icon/upload-cloud.svg';
-import uploadSvg from '@/assets/icon/upload.svg';
-import userCheckSvg from '@/assets/icon/user-check.svg';
-import userMinusSvg from '@/assets/icon/user-minus.svg';
-import userPlusSvg from '@/assets/icon/user-plus.svg';
-import userSvg from '@/assets/icon/user.svg';
-import usersSvg from '@/assets/icon/users.svg';
-import videoOffSvg from '@/assets/icon/video-off.svg';
-import videoSvg from '@/assets/icon/video.svg';
-import voicemailSvg from '@/assets/icon/voicemail.svg';
-import volume1Svg from '@/assets/icon/volume-1.svg';
-import volume2Svg from '@/assets/icon/volume-2.svg';
-import volumeXSvg from '@/assets/icon/volume-x.svg';
-import volumeSvg from '@/assets/icon/volume.svg';
-import watchSvg from '@/assets/icon/watch.svg';
-import wifiOffSvg from '@/assets/icon/wifi-off.svg';
-import wifiSvg from '@/assets/icon/wifi.svg';
-import windSvg from '@/assets/icon/wind.svg';
-import xCircleSvg from '@/assets/icon/x-circle.svg';
-import xOctagonSvg from '@/assets/icon/x-octagon.svg';
-import xSquareSvg from '@/assets/icon/x-square.svg';
-import xSvg from '@/assets/icon/x.svg';
-import youtubeSvg from '@/assets/icon/youtube.svg';
-import zapOffSvg from '@/assets/icon/zap-off.svg';
-import zapSvg from '@/assets/icon/zap.svg';
-import zoomInSvg from '@/assets/icon/zoom-in.svg';
-import zoomOutSvg from '@/assets/icon/zoom-out.svg';
+import activity from '@/assets/icons/activity.svg';
+import airplay from '@/assets/icons/airplay.svg';
+import alertCircle from '@/assets/icons/alert-circle.svg';
+import alertOctagon from '@/assets/icons/alert-octagon.svg';
+import alertTriangle from '@/assets/icons/alert-triangle.svg';
+import alignCenter from '@/assets/icons/align-center.svg';
+import alignJustify from '@/assets/icons/align-justify.svg';
+import alignLeft from '@/assets/icons/align-left.svg';
+import alignRight from '@/assets/icons/align-right.svg';
+import anchor from '@/assets/icons/anchor.svg';
+import aperture from '@/assets/icons/aperture.svg';
+import archive from '@/assets/icons/archive.svg';
+import arrowDownCircle from '@/assets/icons/arrow-down-circle.svg';
+import arrowDownLeft from '@/assets/icons/arrow-down-left.svg';
+import arrowDownRightSvg from '@/assets/icons/arrow-down-right.svg';
+import arrowDownSvg from '@/assets/icons/arrow-down.svg';
+import arrowLeftCircleSvg from '@/assets/icons/arrow-left-circle.svg';
+import arrowLeftSvg from '@/assets/icons/arrow-left.svg';
+import arrowRightCircleSvg from '@/assets/icons/arrow-right-circle.svg';
+import arrowRightSvg from '@/assets/icons/arrow-right.svg';
+import arrowUpCircleSvg from '@/assets/icons/arrow-up-circle.svg';
+import arrowUpLeftSvg from '@/assets/icons/arrow-up-left.svg';
+import arrowUpRightSvg from '@/assets/icons/arrow-up-right.svg';
+import arrowUpSvg from '@/assets/icons/arrow-up.svg';
+import atSignSvg from '@/assets/icons/at-sign.svg';
+import awardSvg from '@/assets/icons/award.svg';
+import barChart2Svg from '@/assets/icons/bar-chart-2.svg';
+import barChartSvg from '@/assets/icons/bar-chart.svg';
+import batteryChargingSvg from '@/assets/icons/battery-charging.svg';
+import batterySvg from '@/assets/icons/battery.svg';
+import bellOffSvg from '@/assets/icons/bell-off.svg';
+import bellSvg from '@/assets/icons/bell.svg';
+import bluetoothSvg from '@/assets/icons/bluetooth.svg';
+import boldSvg from '@/assets/icons/bold.svg';
+import bookOpenSvg from '@/assets/icons/book-open.svg';
+import bookSvg from '@/assets/icons/book.svg';
+import bookmarkSvg from '@/assets/icons/bookmark.svg';
+import boxSvg from '@/assets/icons/box.svg';
+import briefcaseSvg from '@/assets/icons/briefcase.svg';
+import calendarSvg from '@/assets/icons/calendar.svg';
+import cameraOffSvg from '@/assets/icons/camera-off.svg';
+import cameraSvg from '@/assets/icons/camera.svg';
+import castSvg from '@/assets/icons/cast.svg';
+import checkCircleSvg from '@/assets/icons/check-circle.svg';
+import checkSquareSvg from '@/assets/icons/check-square.svg';
+import checkSvg from '@/assets/icons/check.svg';
+import chevronDownSvg from '@/assets/icons/chevron-down.svg';
+import chevronLeftSvg from '@/assets/icons/chevron-left.svg';
+import chevronRightSvg from '@/assets/icons/chevron-right.svg';
+import chevronUpSvg from '@/assets/icons/chevron-up.svg';
+import chevronsDownSvg from '@/assets/icons/chevrons-down.svg';
+import chevronsLeftSvg from '@/assets/icons/chevrons-left.svg';
+import chevronsRightSvg from '@/assets/icons/chevrons-right.svg';
+import chevronsUpSvg from '@/assets/icons/chevrons-up.svg';
+import chromeSvg from '@/assets/icons/chrome.svg';
+import circleSvg from '@/assets/icons/circle.svg';
+import clipboardSvg from '@/assets/icons/clipboard.svg';
+import clockSvg from '@/assets/icons/clock.svg';
+import cloudDrizzleSvg from '@/assets/icons/cloud-drizzle.svg';
+import cloudLightningSvg from '@/assets/icons/cloud-lightning.svg';
+import cloudOffSvg from '@/assets/icons/cloud-off.svg';
+import cloudRainSvg from '@/assets/icons/cloud-rain.svg';
+import cloudSnowSvg from '@/assets/icons/cloud-snow.svg';
+import cloudSvg from '@/assets/icons/cloud.svg';
+import codeSvg from '@/assets/icons/code.svg';
+import codepenSvg from '@/assets/icons/codepen.svg';
+import codesandboxSvg from '@/assets/icons/codesandbox.svg';
+import coffeeSvg from '@/assets/icons/coffee.svg';
+import columnsSvg from '@/assets/icons/columns.svg';
+import commandSvg from '@/assets/icons/command.svg';
+import compassSvg from '@/assets/icons/compass.svg';
+import copySvg from '@/assets/icons/copy.svg';
+import cornerDownLeftSvg from '@/assets/icons/corner-down-left.svg';
+import cornerDownRightSvg from '@/assets/icons/corner-down-right.svg';
+import cornerLeftDownSvg from '@/assets/icons/corner-left-down.svg';
+import cornerLeftUpSvg from '@/assets/icons/corner-left-up.svg';
+import cornerRightDownSvg from '@/assets/icons/corner-right-down.svg';
+import cornerRightUpSvg from '@/assets/icons/corner-right-up.svg';
+import cornerUpLeftSvg from '@/assets/icons/corner-up-left.svg';
+import cornerUpRightSvg from '@/assets/icons/corner-up-right.svg';
+import cpuSvg from '@/assets/icons/cpu.svg';
+import creditCardSvg from '@/assets/icons/credit-card.svg';
+import cropSvg from '@/assets/icons/crop.svg';
+import crosshairSvg from '@/assets/icons/crosshair.svg';
+import databaseSvg from '@/assets/icons/database.svg';
+import deleteSvg from '@/assets/icons/delete.svg';
+import discSvg from '@/assets/icons/disc.svg';
+import dollarSignSvg from '@/assets/icons/dollar-sign.svg';
+import downloadCloudSvg from '@/assets/icons/download-cloud.svg';
+import downloadSvg from '@/assets/icons/download.svg';
+import dropletSvg from '@/assets/icons/droplet.svg';
+import edit2Svg from '@/assets/icons/edit-2.svg';
+import edit3Svg from '@/assets/icons/edit-3.svg';
+import editSvg from '@/assets/icons/edit.svg';
+import externalLinkSvg from '@/assets/icons/external-link.svg';
+import eyeOffSvg from '@/assets/icons/eye-off.svg';
+import eyeSvg from '@/assets/icons/eye.svg';
+import facebookSvg from '@/assets/icons/facebook.svg';
+import fastForwardSvg from '@/assets/icons/fast-forward.svg';
+import featherSvg from '@/assets/icons/feather.svg';
+import figmaSvg from '@/assets/icons/figma.svg';
+import fileMinusSvg from '@/assets/icons/file-minus.svg';
+import filePlusSvg from '@/assets/icons/file-plus.svg';
+import fileSvg from '@/assets/icons/file.svg';
+import fileTextSvg from '@/assets/icons/file-text.svg';
+import filmSvg from '@/assets/icons/film.svg';
+import filterSvg from '@/assets/icons/filter.svg';
+import flagSvg from '@/assets/icons/flag.svg';
+import folderMinusSvg from '@/assets/icons/folder-minus.svg';
+import folderPlusSvg from '@/assets/icons/folder-plus.svg';
+import folderSvg from '@/assets/icons/folder.svg';
+import framerSvg from '@/assets/icons/framer.svg';
+import frownSvg from '@/assets/icons/frown.svg';
+import giftSvg from '@/assets/icons/gift.svg';
+import gitBranchSvg from '@/assets/icons/git-branch.svg';
+import gitCommitSvg from '@/assets/icons/git-commit.svg';
+import gitMergeSvg from '@/assets/icons/git-merge.svg';
+import gitPullRequestSvg from '@/assets/icons/git-pull-request.svg';
+import githubSvg from '@/assets/icons/github.svg';
+import gitlabSvg from '@/assets/icons/gitlab.svg';
+import globeSvg from '@/assets/icons/globe.svg';
+import gridSvg from '@/assets/icons/grid.svg';
+import hardDriveSvg from '@/assets/icons/hard-drive.svg';
+import hashSvg from '@/assets/icons/hash.svg';
+import headphonesSvg from '@/assets/icons/headphones.svg';
+import heartSvg from '@/assets/icons/heart.svg';
+import helpCircleSvg from '@/assets/icons/help-circle.svg';
+import hexagonSvg from '@/assets/icons/hexagon.svg';
+import homeSvg from '@/assets/icons/home.svg';
+import imageSvg from '@/assets/icons/image.svg';
+import inboxSvg from '@/assets/icons/inbox.svg';
+import infoSvg from '@/assets/icons/info.svg';
+import instagramSvg from '@/assets/icons/instagram.svg';
+import italicSvg from '@/assets/icons/italic.svg';
+import keySvg from '@/assets/icons/key.svg';
+import layersSvg from '@/assets/icons/layers.svg';
+import layoutSvg from '@/assets/icons/layout.svg';
+import lifeBuoySvg from '@/assets/icons/life-buoy.svg';
+import link2Svg from '@/assets/icons/link-2.svg';
+import linkSvg from '@/assets/icons/link.svg';
+import linkedinSvg from '@/assets/icons/linkedin.svg';
+import listSvg from '@/assets/icons/list.svg';
+import loaderSvg from '@/assets/icons/loader.svg';
+import lockSvg from '@/assets/icons/lock.svg';
+import logInSvg from '@/assets/icons/log-in.svg';
+import logOutSvg from '@/assets/icons/log-out.svg';
+import mailSvg from '@/assets/icons/mail.svg';
+import mapPinSvg from '@/assets/icons/map-pin.svg';
+import mapSvg from '@/assets/icons/map.svg';
+import maximize2Svg from '@/assets/icons/maximize-2.svg';
+import maximizeSvg from '@/assets/icons/maximize.svg';
+import mehSvg from '@/assets/icons/meh.svg';
+import menuSvg from '@/assets/icons/menu.svg';
+import messageCircleSvg from '@/assets/icons/message-circle.svg';
+import messageSquareSvg from '@/assets/icons/message-square.svg';
+import micOffSvg from '@/assets/icons/mic-off.svg';
+import micSvg from '@/assets/icons/mic.svg';
+import minimize2Svg from '@/assets/icons/minimize-2.svg';
+import minimizeSvg from '@/assets/icons/minimize.svg';
+import minusCircleSvg from '@/assets/icons/minus-circle.svg';
+import minusSquareSvg from '@/assets/icons/minus-square.svg';
+import minusSvg from '@/assets/icons/minus.svg';
+import monitorSvg from '@/assets/icons/monitor.svg';
+import moonSvg from '@/assets/icons/moon.svg';
+import moreHorizontalSvg from '@/assets/icons/more-horizontal.svg';
+import moreVerticalSvg from '@/assets/icons/more-vertical.svg';
+import mousePointerSvg from '@/assets/icons/mouse-pointer.svg';
+import moveSvg from '@/assets/icons/move.svg';
+import musicSvg from '@/assets/icons/music.svg';
+import navigation2Svg from '@/assets/icons/navigation-2.svg';
+import navigationSvg from '@/assets/icons/navigation.svg';
+import octagonSvg from '@/assets/icons/octagon.svg';
+import packageSvg from '@/assets/icons/package.svg';
+import paperclipSvg from '@/assets/icons/paperclip.svg';
+import pauseCircleSvg from '@/assets/icons/pause-circle.svg';
+import pauseSvg from '@/assets/icons/pause.svg';
+import penToolSvg from '@/assets/icons/pen-tool.svg';
+import percentSvg from '@/assets/icons/percent.svg';
+import phoneCallSvg from '@/assets/icons/phone-call.svg';
+import phoneForwardedSvg from '@/assets/icons/phone-forwarded.svg';
+import phoneIncomingSvg from '@/assets/icons/phone-incoming.svg';
+import phoneMissedSvg from '@/assets/icons/phone-missed.svg';
+import phoneOffSvg from '@/assets/icons/phone-off.svg';
+import phoneOutgoingSvg from '@/assets/icons/phone-outgoing.svg';
+import phoneSvg from '@/assets/icons/phone.svg';
+import pieChartSvg from '@/assets/icons/pie-chart.svg';
+import playCircleSvg from '@/assets/icons/play-circle.svg';
+import playSvg from '@/assets/icons/play.svg';
+import plusCircleSvg from '@/assets/icons/plus-circle.svg';
+import plusSquareSvg from '@/assets/icons/plus-square.svg';
+import plusSvg from '@/assets/icons/plus.svg';
+import pocketSvg from '@/assets/icons/pocket.svg';
+import powerSvg from '@/assets/icons/power.svg';
+import printerSvg from '@/assets/icons/printer.svg';
+import radioSvg from '@/assets/icons/radio.svg';
+import refreshCcwSvg from '@/assets/icons/refresh-ccw.svg';
+import refreshCwSvg from '@/assets/icons/refresh-cw.svg';
+import repeatSvg from '@/assets/icons/repeat.svg';
+import rewindSvg from '@/assets/icons/rewind.svg';
+import rotateCcwSvg from '@/assets/icons/rotate-ccw.svg';
+import rotateCwSvg from '@/assets/icons/rotate-cw.svg';
+import rssSvg from '@/assets/icons/rss.svg';
+import saveSvg from '@/assets/icons/save.svg';
+import scissorsSvg from '@/assets/icons/scissors.svg';
+import searchSvg from '@/assets/icons/search.svg';
+import sendSvg from '@/assets/icons/send.svg';
+import serverSvg from '@/assets/icons/server.svg';
+import settingsSvg from '@/assets/icons/settings.svg';
+import share2Svg from '@/assets/icons/share-2.svg';
+import shareSvg from '@/assets/icons/share.svg';
+import shieldOffSvg from '@/assets/icons/shield-off.svg';
+import shieldSvg from '@/assets/icons/shield.svg';
+import shoppingBagSvg from '@/assets/icons/shopping-bag.svg';
+import shoppingCartSvg from '@/assets/icons/shopping-cart.svg';
+import shuffleSvg from '@/assets/icons/shuffle.svg';
+import sidebarSvg from '@/assets/icons/sidebar.svg';
+import skipBackSvg from '@/assets/icons/skip-back.svg';
+import skipForwardSvg from '@/assets/icons/skip-forward.svg';
+import slackSvg from '@/assets/icons/slack.svg';
+import slashSvg from '@/assets/icons/slash.svg';
+import slidersSvg from '@/assets/icons/sliders.svg';
+import smartphoneSvg from '@/assets/icons/smartphone.svg';
+import smileSvg from '@/assets/icons/smile.svg';
+import speakerSvg from '@/assets/icons/speaker.svg';
+import squareSvg from '@/assets/icons/square.svg';
+import starSvg from '@/assets/icons/star.svg';
+import stopCircleSvg from '@/assets/icons/stop-circle.svg';
+import sunSvg from '@/assets/icons/sun.svg';
+import sunriseSvg from '@/assets/icons/sunrise.svg';
+import sunsetSvg from '@/assets/icons/sunset.svg';
+import tabletSvg from '@/assets/icons/tablet.svg';
+import tagSvg from '@/assets/icons/tag.svg';
+import targetSvg from '@/assets/icons/target.svg';
+import terminalSvg from '@/assets/icons/terminal.svg';
+import thermometerSvg from '@/assets/icons/thermometer.svg';
+import thumbsDownSvg from '@/assets/icons/thumbs-down.svg';
+import thumbsUpSvg from '@/assets/icons/thumbs-up.svg';
+import toggleLeftSvg from '@/assets/icons/toggle-left.svg';
+import toggleRightSvg from '@/assets/icons/toggle-right.svg';
+import toolSvg from '@/assets/icons/tool.svg';
+import trash2Svg from '@/assets/icons/trash-2.svg';
+import trashSvg from '@/assets/icons/trash.svg';
+import trelloSvg from '@/assets/icons/trello.svg';
+import trendingDownSvg from '@/assets/icons/trending-down.svg';
+import trendingUpSvg from '@/assets/icons/trending-up.svg';
+import triangleSvg from '@/assets/icons/triangle.svg';
+import truckSvg from '@/assets/icons/truck.svg';
+import tvSvg from '@/assets/icons/tv.svg';
+import twitchSvg from '@/assets/icons/twitch.svg';
+import twitterSvg from '@/assets/icons/twitter.svg';
+import typeSvg from '@/assets/icons/type.svg';
+import umbrellaSvg from '@/assets/icons/umbrella.svg';
+import underlineSvg from '@/assets/icons/underline.svg';
+import unlockSvg from '@/assets/icons/unlock.svg';
+import uploadCloudSvg from '@/assets/icons/upload-cloud.svg';
+import uploadSvg from '@/assets/icons/upload.svg';
+import userCheckSvg from '@/assets/icons/user-check.svg';
+import userMinusSvg from '@/assets/icons/user-minus.svg';
+import userPlusSvg from '@/assets/icons/user-plus.svg';
+import userSvg from '@/assets/icons/user.svg';
+import usersSvg from '@/assets/icons/users.svg';
+import videoOffSvg from '@/assets/icons/video-off.svg';
+import videoSvg from '@/assets/icons/video.svg';
+import voicemailSvg from '@/assets/icons/voicemail.svg';
+import volume1Svg from '@/assets/icons/volume-1.svg';
+import volume2Svg from '@/assets/icons/volume-2.svg';
+import volumeXSvg from '@/assets/icons/volume-x.svg';
+import volumeSvg from '@/assets/icons/volume.svg';
+import watchSvg from '@/assets/icons/watch.svg';
+import wifiOffSvg from '@/assets/icons/wifi-off.svg';
+import wifiSvg from '@/assets/icons/wifi.svg';
+import windSvg from '@/assets/icons/wind.svg';
+import xCircleSvg from '@/assets/icons/x-circle.svg';
+import xOctagonSvg from '@/assets/icons/x-octagon.svg';
+import xSquareSvg from '@/assets/icons/x-square.svg';
+import xSvg from '@/assets/icons/x.svg';
+import youtubeSvg from '@/assets/icons/youtube.svg';
+import zapOffSvg from '@/assets/icons/zap-off.svg';
+import zapSvg from '@/assets/icons/zap.svg';
+import zoomInSvg from '@/assets/icons/zoom-in.svg';
+import zoomOutSvg from '@/assets/icons/zoom-out.svg';
 
-<Meta title="Icon/Iconography" />
+<Meta title="icons/Iconography" />
 
 <Title>Iconography</Title>
 
