--- a/src/docs/license/bamboo_license.mdx
+++ b/src/docs/license/bamboo_license.mdx
@@ -1,6 +1,6 @@
-import License from '../../LICENSE?raw';
+import License from '../../../LICENSE?raw';
 import { Meta, Markdown } from '@storybook/blocks';
 
-<Meta title="Docs/License" />
+<Meta title="License/Bamboo" />
 
 <Markdown>{License}</Markdown>
